server/src/web/com/killard/parser/ScriptParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 Script.g 2009-09-29 11:28:18

package com.killard.parser;


import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.DFA;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.IntStream;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteEarlyExitException;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

import java.util.HashMap;

public class ScriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "STRING", "NUMBER", "BOOLEAN", "OBJECT", "FIELD", "ARRAY", "FUNCTION", "UNARY", "SEQUENCE", "BLOCK", "PAR", "VAR", "CALL", "ARGUMENTS", "LOOP", "IF", "CONTINUE", "BREAK", "RETURN", "SWITCH", "LABEL", "COMMA", "TRUE", "FALSE", "NULL", "DecimalLiteral", "FloatingPointLiteral", "StringLiteral", "Identifier", "IntegerTypeSuffix", "Letter", "UnicodeEscape", "EscapeSequence", "HexDigit", "Digit", "OctalEscape", "FloatTypeSuffix", "Exponent", "HexLiteral", "OctalLiteral", "WS", "COMMENT", "LINE_COMMENT", "'true'", "'false'", "'null'", "'{'", "'}'", "'['", "']'", "'function'", "'('", "')'", "':'", "'='", "';'", "'var'", "'if'", "'else'", "'for'", "'while'", "'do'", "'switch'", "'return'", "'break'", "'continue'", "'in'", "'case'", "'default'", "'+='", "'-='", "'*='", "'/='", "'?'", "'||'", "'&&'", "'=='", "'!='", "'instanceof'", "'<='", "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'~'", "'!'", "'.'"
    };
    public static final int FUNCTION=10;
    public static final int FloatTypeSuffix=40;
    public static final int OctalLiteral=43;
    public static final int EOF=-1;
    public static final int BREAK=21;
    public static final int Identifier=32;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__90=90;
    public static final int LOOP=18;
    public static final int RETURN=22;
    public static final int VAR=15;
    public static final int COMMENT=45;
    public static final int ARRAY=9;
    public static final int T__96=96;
    public static final int T__95=95;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int ARGUMENTS=17;
    public static final int T__83=83;
    public static final int LINE_COMMENT=46;
    public static final int IntegerTypeSuffix=33;
    public static final int SWITCH=23;
    public static final int NULL=28;
    public static final int NUMBER=5;
    public static final int T__85=85;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__86=86;
    public static final int T__89=89;
    public static final int T__88=88;
    public static final int SEQUENCE=12;
    public static final int WS=44;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__70=70;
    public static final int FloatingPointLiteral=30;
    public static final int FIELD=8;
    public static final int CALL=16;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int FALSE=27;
    public static final int T__74=74;
    public static final int T__73=73;
    public static final int Letter=34;
    public static final int EscapeSequence=36;
    public static final int T__79=79;
    public static final int T__78=78;
    public static final int T__77=77;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int Exponent=41;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int HexDigit=37;
    public static final int IF=19;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int BOOLEAN=6;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int OBJECT=7;
    public static final int CONTINUE=20;
    public static final int COMMA=25;
    public static final int T__59=59;
    public static final int PAR=14;
    public static final int UNARY=11;
    public static final int T__50=50;
    public static final int HexLiteral=42;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int Digit=38;
    public static final int DecimalLiteral=29;
    public static final int TRUE=26;
    public static final int StringLiteral=31;
    public static final int LABEL=24;
    public static final int UnicodeEscape=35;
    public static final int BLOCK=13;
    public static final int OctalEscape=39;
    public static final int STRING=4;

    // delegates
    // delegators


        public ScriptParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ScriptParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[126+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ScriptParser.tokenNames; }
    public String getGrammarFileName() { return "Script.g"; }


    public static class value_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "value"
    // Script.g:24:1: value : ( literal | object | array | function );
    public final ScriptParser.value_return value() throws RecognitionException {
        ScriptParser.value_return retval = new ScriptParser.value_return();
        retval.start = input.LT(1);
        int value_StartIndex = input.index();
        Object root_0 = null;

        ScriptParser.literal_return literal1 = null;

        ScriptParser.object_return object2 = null;

        ScriptParser.array_return array3 = null;

        ScriptParser.function_return function4 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // Script.g:25:2: ( literal | object | array | function )
            int alt1=4;
            switch ( input.LA(1) ) {
            case DecimalLiteral:
            case FloatingPointLiteral:
            case StringLiteral:
            case 47:
            case 48:
            case 49:
                {
                alt1=1;
                }
                break;
            case 50:
                {
                alt1=2;
                }
                break;
            case 52:
                {
                alt1=3;
                }
                break;
            case 54:
                {
                alt1=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // Script.g:25:4: literal
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_literal_in_value139);
                    literal1=literal();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, literal1.getTree());

                    }
                    break;
                case 2 :
                    // Script.g:26:4: object
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_object_in_value144);
                    object2=object();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, object2.getTree());

                    }
                    break;
                case 3 :
                    // Script.g:27:4: array
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_array_in_value149);
                    array3=array();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, array3.getTree());

                    }
                    break;
                case 4 :
                    // Script.g:28:4: function
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_function_in_value154);
                    function4=function();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, function4.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, value_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "value"

    public static class literal_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "literal"
    // Script.g:31:1: literal : ( DecimalLiteral -> ^( NUMBER DecimalLiteral ) | FloatingPointLiteral -> ^( NUMBER FloatingPointLiteral ) | StringLiteral -> ^( STRING StringLiteral ) | 'true' -> TRUE | 'false' -> FALSE | 'null' -> NULL );
    public final ScriptParser.literal_return literal() throws RecognitionException {
        ScriptParser.literal_return retval = new ScriptParser.literal_return();
        retval.start = input.LT(1);
        int literal_StartIndex = input.index();
        Object root_0 = null;

        Token DecimalLiteral5=null;
        Token FloatingPointLiteral6=null;
        Token StringLiteral7=null;
        Token string_literal8=null;
        Token string_literal9=null;
        Token string_literal10=null;

        Object DecimalLiteral5_tree=null;
        Object FloatingPointLiteral6_tree=null;
        Object StringLiteral7_tree=null;
        Object string_literal8_tree=null;
        Object string_literal9_tree=null;
        Object string_literal10_tree=null;
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_StringLiteral=new RewriteRuleTokenStream(adaptor,"token StringLiteral");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_DecimalLiteral=new RewriteRuleTokenStream(adaptor,"token DecimalLiteral");
        RewriteRuleTokenStream stream_FloatingPointLiteral=new RewriteRuleTokenStream(adaptor,"token FloatingPointLiteral");

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // Script.g:32:6: ( DecimalLiteral -> ^( NUMBER DecimalLiteral ) | FloatingPointLiteral -> ^( NUMBER FloatingPointLiteral ) | StringLiteral -> ^( STRING StringLiteral ) | 'true' -> TRUE | 'false' -> FALSE | 'null' -> NULL )
            int alt2=6;
            switch ( input.LA(1) ) {
            case DecimalLiteral:
                {
                alt2=1;
                }
                break;
            case FloatingPointLiteral:
                {
                alt2=2;
                }
                break;
            case StringLiteral:
                {
                alt2=3;
                }
                break;
            case 47:
                {
                alt2=4;
                }
                break;
            case 48:
                {
                alt2=5;
                }
                break;
            case 49:
                {
                alt2=6;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // Script.g:32:8: DecimalLiteral
                    {
                    DecimalLiteral5=(Token)match(input,DecimalLiteral,FOLLOW_DecimalLiteral_in_literal170); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_DecimalLiteral.add(DecimalLiteral5);



                    // AST REWRITE
                    // elements: DecimalLiteral
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 32:23: -> ^( NUMBER DecimalLiteral )
                    {
                        // Script.g:32:26: ^( NUMBER DecimalLiteral )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(NUMBER, "NUMBER"), root_1);

                        adaptor.addChild(root_1, stream_DecimalLiteral.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // Script.g:33:4: FloatingPointLiteral
                    {
                    FloatingPointLiteral6=(Token)match(input,FloatingPointLiteral,FOLLOW_FloatingPointLiteral_in_literal183); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_FloatingPointLiteral.add(FloatingPointLiteral6);



                    // AST REWRITE
                    // elements: FloatingPointLiteral
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 33:25: -> ^( NUMBER FloatingPointLiteral )
                    {
                        // Script.g:33:28: ^( NUMBER FloatingPointLiteral )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(NUMBER, "NUMBER"), root_1);

                        adaptor.addChild(root_1, stream_FloatingPointLiteral.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 3 :
                    // Script.g:34:4: StringLiteral
                    {
                    StringLiteral7=(Token)match(input,StringLiteral,FOLLOW_StringLiteral_in_literal196); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_StringLiteral.add(StringLiteral7);



                    // AST REWRITE
                    // elements: StringLiteral
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 34:18: -> ^( STRING StringLiteral )
                    {
                        // Script.g:34:21: ^( STRING StringLiteral )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(STRING, "STRING"), root_1);

                        adaptor.addChild(root_1, stream_StringLiteral.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 4 :
                    // Script.g:35:4: 'true'
                    {
                    string_literal8=(Token)match(input,47,FOLLOW_47_in_literal209); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_47.add(string_literal8);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 35:11: -> TRUE
                    {
                        adaptor.addChild(root_0, (Object)adaptor.create(TRUE, "TRUE"));

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 5 :
                    // Script.g:36:8: 'false'
                    {
                    string_literal9=(Token)match(input,48,FOLLOW_48_in_literal222); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_48.add(string_literal9);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 36:16: -> FALSE
                    {
                        adaptor.addChild(root_0, (Object)adaptor.create(FALSE, "FALSE"));

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 6 :
                    // Script.g:37:4: 'null'
                    {
                    string_literal10=(Token)match(input,49,FOLLOW_49_in_literal231); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_49.add(string_literal10);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 37:11: -> NULL
                    {
                        adaptor.addChild(root_0, (Object)adaptor.create(NULL, "NULL"));

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, literal_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "literal"

    public static class object_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "object"
    // Script.g:40:1: object : '{' members '}' -> ^( OBJECT members ) ;
    public final ScriptParser.object_return object() throws RecognitionException {
        ScriptParser.object_return retval = new ScriptParser.object_return();
        retval.start = input.LT(1);
        int object_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal11=null;
        Token char_literal13=null;
        ScriptParser.members_return members12 = null;


        Object char_literal11_tree=null;
        Object char_literal13_tree=null;
        RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
        RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
        RewriteRuleSubtreeStream stream_members=new RewriteRuleSubtreeStream(adaptor,"rule members");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // Script.g:40:8: ( '{' members '}' -> ^( OBJECT members ) )
            // Script.g:40:10: '{' members '}'
            {
            char_literal11=(Token)match(input,50,FOLLOW_50_in_object249); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_50.add(char_literal11);

            pushFollow(FOLLOW_members_in_object251);
            members12=members();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_members.add(members12.getTree());
            char_literal13=(Token)match(input,51,FOLLOW_51_in_object253); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_51.add(char_literal13);



            // AST REWRITE
            // elements: members
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 41:4: -> ^( OBJECT members )
            {
                // Script.g:41:7: ^( OBJECT members )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OBJECT, "OBJECT"), root_1);

                adaptor.addChild(root_1, stream_members.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, object_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "object"

    public static class array_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "array"
    // Script.g:43:1: array : '[' elements ']' -> ^( ARRAY elements ) ;
    public final ScriptParser.array_return array() throws RecognitionException {
        ScriptParser.array_return retval = new ScriptParser.array_return();
        retval.start = input.LT(1);
        int array_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal14=null;
        Token char_literal16=null;
        ScriptParser.elements_return elements15 = null;


        Object char_literal14_tree=null;
        Object char_literal16_tree=null;
        RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
        RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
        RewriteRuleSubtreeStream stream_elements=new RewriteRuleSubtreeStream(adaptor,"rule elements");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // Script.g:43:7: ( '[' elements ']' -> ^( ARRAY elements ) )
            // Script.g:43:9: '[' elements ']'
            {
            char_literal14=(Token)match(input,52,FOLLOW_52_in_array274); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_52.add(char_literal14);

            pushFollow(FOLLOW_elements_in_array276);
            elements15=elements();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_elements.add(elements15.getTree());
            char_literal16=(Token)match(input,53,FOLLOW_53_in_array278); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_53.add(char_literal16);



            // AST REWRITE
            // elements: elements
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 44:4: -> ^( ARRAY elements )
            {
                // Script.g:44:7: ^( ARRAY elements )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ARRAY, "ARRAY"), root_1);

                adaptor.addChild(root_1, stream_elements.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
